# AuctiML

./: .gitignore  README.md  pyproject.toml
back/parser/: parse_json_to_db.py
back/parser/Torgi/: get_json_api.py
back/service/: models.py
back/service/model/: predictForURL.py
back/service/utils/: connectToDB.py  validator.py
front/telegramBot/: telegramBot.py
model/: EDA.ipynb  README.md  preproc_data.ipynb
systemdesign/: bot.md  data.md  design.md  users.md
systemdesign/media/: diagram (1).json  lotcards_example.json
