[tool.poetry]
name = "auctiml"
version = "0.1.0"
description = ""
authors = ["ann senina <as.senina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
telebot = "^0.0.5"
flake8 = "^6.1.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
